kafka-ui/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kafka-ui-http
  namespace: kafka-system
spec:
  parentRefs:
  - name: shared-https-gateway
    namespace: kube-system
    sectionName: http
  hostnames:
  - kafka-dashboard-ui.pfs.pack
  rules:
  - backendRefs:
    - name: kafka-ui
      port: 80
  # - filters:
  #   - type: RequestRedirect
  #     requestRedirect:
  #       scheme: https
  #       statusCode: 301
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: kafka-ui-https-redirect
#   namespace: kafka-system
# spec:
#   parentRefs:
#   - name: shared-https-gateway
#     namespace: kube-system
#     sectionName: https
#   hostnames:
#   - kafka-dashboard-ui.pfs.pack
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: "/"
#     backendRefs:
#     - name: kafka-ui
#       port: 80
